[gd_scene load_steps=6 format=3 uid="uid://drgx362yg0d2f"]

[ext_resource type="Script" path="res://scripts/actors/base_actor.gd" id="1_vj5q8"]
[ext_resource type="Script" path="res://scripts/nodes/move_controller.gd" id="1_yid41"]
[ext_resource type="Script" path="res://scripts/nodes/animation_controller.gd" id="3_7fuhn"]
[ext_resource type="Script" path="res://scripts/nodes/health.gd" id="4_lw3ko"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mbaou"]

[node name="BasicActor" type="CharacterBody3D"]
script = ExtResource("1_vj5q8")

[node name="MoveController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_yid41")

[node name="AnimController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_7fuhn")

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_lw3ko")

[node name="RemoteTransform" type="RemoteTransform3D" parent="."]
unique_name_in_owner = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_mbaou")
